--- a/componentsFundamentals/index.html
+++ b/componentsFundamentals/index.html
@@ -33,7 +33,7 @@
           you
         </h2>
 
-        <plan-picker></plan-picker>
+        <planpicker></planpicker>
       </div>
     </div>
 
